--- a/index.html
+++ b/index.html
@@ -1,41 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smaya-Nihan Site</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f0f8ff;
-            text-align: center;
-            padding: 50px;
-        }
-        h1 {
-            color: #2c3e50;
-        }
-        p {
-            font-size: 18px;
-            color: #555;
-        }
-        .button {
-            display: inline-block;
-            margin-top: 20px;
-            padding: 10px 20px;
-            font-size: 16px;
-            background: #3498db;
-            color: white;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-        .button:hover {
-            background: #2980b9;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Smaya & Nihanth Reddy</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Comic Sans MS', sans-serif;
+      background: linear-gradient(45deg, #ffecd2, #fcb69f);
+      color: #333;
+      text-align: center;
+    }
+    header {
+      background: linear-gradient(to right, #ff7e5f, #feb47b);
+      padding: 40px 20px;
+      color: white;
+      font-size: 2em;
+      text-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+    }
+    .content {
+      padding: 20px;
+    }
+    .card {
+      background: white;
+      border-radius: 15px;
+      padding: 20px;
+      margin: 15px auto;
+      width: 80%;
+      max-width: 400px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      transition: transform 0.3s;
+    }
+    .card:hover {
+      transform: scale(1.05);
+    }
+    h2 {
+      color: #ff7e5f;
+    }
+    footer {
+      background: #ff7e5f;
+      color: white;
+      padding: 10px;
+      margin-top: 30px;
+    }
+    .button {
+      background: #feb47b;
+      border: none;
+      padding: 10px 20px;
+      font-size: 1em;
+      margin-top: 10px;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+    .button:hover {
+      background: #ff7e5f;
+      color: white;
+    }
+  </style>
 </head>
 <body>
-    <h1>Welcome to Smaya-Nihan Play Site</h1>
-    <p>This is a page for Smaya and Nihan.</p>
-    <a href="https://github.com" class="button">Visit GitHub</a>
+  <header>
+    Welcome to Smaya & Nihanth Reddy's World!
+  </header>
+
+  <div class="content">
+    <div class="card">
+      <h2>About Smaya</h2>
+      <p>Smaya loves drawing, singing, and exploring new things!</p>
+      <button class="button">Know More</button>
+    </div>
+
+    <div class="card">
+      <h2>About Nihanth</h2>
+      <p>Nihanth enjoys playing football, reading, and adventures!</p>
+      <button class="button">Know More</button>
+    </div>
+  </div>
+
+  <footer>
+    Made with ❤️ for Smaya & Nihanth
+  </footer>
 </body>
 </html>
