--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
             <h2>Explore, Create, and Have Fun!</h2>
             <p>Join Smaya and Nihanth as they share their awesome drawings, stories, and exciting discoveries.</p>
             <div class="hero-images">
-                <img src="images" alt="Smaya's Picture" class="smaya-pic">
-                <img src="images" alt="Nihanth's Picture" class="nihanth-pic">
+                <img src="images/Smaya-Nihan.jpg" alt="Smaya's Picture" class="smaya-pic">
+                <img src="images/Smaya-Nihan.jpg" alt="Nihanth's Picture" class="nihanth-pic">
             </div>
             <button class="explore-button">Start Exploring!</button>
         </section>
@@ -55,9 +55,9 @@
             <h3>🌈 Our Fun Gallery 🌟</h3>
             <p>Check out some of our favorite moments and creations together!</p>
             <div class="gallery-grid">
-                <div class="gallery-item"><img src="images" alt="Gallery Image 1"></div>
-                <div class="gallery-item"><img src="images" alt="Gallery Image 2"></div>
-                <div class="gallery-item"><img src="images" alt="Gallery Image 3"></div>
+                <div class="gallery-item"><img src="images/Smaya-Nihan.jpg" alt="Gallery Image 1"></div>
+                <div class="gallery-item"><img src="images/Smaya-Nihan.jpg" alt="Gallery Image 2"></div>
+                <div class="gallery-item"><img src="images/Smaya-Nihan.jpg" alt="Gallery Image 3"></div>
             </div>
             <button class="explore-button">View Full Gallery!</button>
         </section>
