--- a/index.html
+++ b/index.html
@@ -23,45 +23,64 @@
     <main>
         <section class="hero-section">
             <h2>Explore, Create, and Have Fun!</h2>
-            <p>Join Smaya and Nihanth as they share their awesome drawings, stories, and exciting discoveries.</p>
+            <p>Join Smaya and Nihanth as they share their awesome drawings, imaginative stories, and exciting discoveries. There's always something new to see!</p>
             <div class="hero-images">
                 <img src="images/smaya.jpg" alt="Smaya's Picture" class="smaya-pic">
                 <img src="images/nihan.jpg" alt="Nihanth's Picture" class="nihanth-pic">
             </div>
-            <button class="explore-button">Start Exploring!</button>
+            <button class="explore-button">Start Our Grand Adventure!</button>
         </section>
 
         <section id="smaya-section" class="child-section smaya-theme">
             <h3>🌸 Smaya's Creative Corner 🌸</h3>
-            <p>Here you'll find Smaya's beautiful artwork, imaginative stories, and super fun projects!</p>
+            <p>Step into Smaya's world where colors bloom and stories come to life! Discover her latest masterpieces and magical tales.</p>
+
             <div class="content-item">
-                <h4>My Latest Drawing: The Magical Unicorn!</h4>
-                <p>I drew a unicorn that can fly over rainbows!</p>
-                </div>
+                <h4>My Latest Art Piece: The Sparkling Ocean!</h4>
+                <p>I painted a vibrant ocean scene with a friendly dolphin and shimmering fish. What's your favorite sea creature?</p>
+                <img src="images/smaya_art_ocean.jpg" alt="Smaya's ocean drawing" class="content-image">
+                <p class="image-caption">Painted with my favorite glitter pens!</p>
+            </div>
+
+            <div class="content-item">
+                <h4>A Story I Wrote: The Little Cloud's Big Dream</h4>
+                <p>This is a story about a tiny cloud who wanted to be the biggest, fluffiest cloud in the sky!</p>
+                <a href="#" class="read-more-link">Read Smaya's Full Story</a>
+            </div>
+
             <button class="view-all-button smaya-button">See More of Smaya's Fun!</button>
         </section>
 
         <section id="nihanth-section" class="child-section nihanth-theme">
             <h3>🚀 Nihanth's Explorer Zone 🚀</h3>
-            <p>Dive into Nihanth's world of cool robots, amazing space adventures, and exciting experiments!</p>
+            <p>Blast off into Nihanth's exciting universe! Explore his cool inventions, space adventures, and mind-bending science facts.</p>
+
             <div class="content-item">
-                <h4>My New Robot Design: Robo-Helper!</h4>
-                <p>This robot can help you clean your room and play games!</p>
-                </div>
+                <h4>My Coolest Creation: The Robo-Dino Friend!</h4>
+                <p>I built a robot dinosaur that can stomp, roar, and even fetch small toys! It's super strong!</p>
+                <img src="images/nihanth_robot_dino.jpg" alt="Nihanth's robot dinosaur" class="content-image">
+                <p class="image-caption">It lights up blue!</p>
+            </div>
+
+            <div class="content-item">
+                <h4>Amazing Science Fact: Why Is the Sky Blue?</h4>
+                <p>Did you know the sky is blue because of tiny particles that scatter sunlight? Learn more cool facts!</p>
+                <a href="#" class="read-more-link">Explore More Science Fun</a>
+            </div>
+
             <button class="view-all-button nihanth-button">Discover Nihanth's Adventures!</button>
         </section>
 
         <section id="gallery-section" class="gallery-section">
             <h3>🌈 Our Fun Gallery 🌟</h3>
-            <p>Check out some of our favorite moments and creations together!</p>
+            <p>Take a peek at our combined gallery of awesome moments, shared projects, and family fun! New pictures added regularly!</p>
             <div class="gallery-grid">
-                <div class="gallery-item"><img src="images/smaya-nihan1.jpg" alt="Gallery Image 1"></div>
-                <div class="gallery-item"><img src="images/Smaya-Nihan.jpg" alt="Gallery Image 2"></div>
-                <div class="gallery-item"><img src="images/nihan.jpg" alt="Gallery Image 3"></div>
-            </div>
-<div class="gallery-item"><img src="images/smaya.jpg" alt="Gallery Image 3"></div>
-            </div>
-            <button class="explore-button">View Full Gallery!</button>
+                <div class="gallery-item"><img src="images/Smaya-Nihan.jpg" alt="Smaya and Nihanth playing"></div>
+                <div class="gallery-item"><img src="images/nihan.jpg" alt="Smaya's school project"></div>
+                <div class="gallery-item"><img src="images/smaya-nihan1.jpg" alt="Nihanth's lego creation"></div>
+                <div class="gallery-item"><img src="images/smaya.jpg" alt="Kids at the park"></div>
+                </div>
+            <button class="explore-button">See All Our Amazing Memories!</button>
         </section>
     </main>
 
