--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#smaya-section">Smaya's Corner</a></li>
                 <li><a href="#nihanth-section">Nihanth's Zone</a></li>
+                <li><a href="#shared-fun">Shared Fun!</a></li>
                 <li><a href="#gallery-section">Fun Gallery</a></li>
             </ul>
         </nav>
@@ -23,7 +24,7 @@
     <main>
         <section class="hero-section">
             <h2>Explore, Create, and Have Fun!</h2>
-            <p>Join Smaya and Nihanth as they share their awesome drawings, imaginative stories, and exciting discoveries. There's always something new to see!</p>
+            <p>Join Smaya and Nihanth as they share their awesome drawings, imaginative stories, exciting discoveries, and super fun games!</p>
             <div class="hero-images">
                 <img src="images/smaya.jpg" alt="Smaya's Picture" class="smaya-pic">
                 <img src="images/nihan.jpg" alt="Nihanth's Picture" class="nihanth-pic">
@@ -33,54 +34,171 @@
 
         <section id="smaya-section" class="child-section smaya-theme">
             <h3>🌸 Smaya's Creative Corner 🌸</h3>
-            <p>Step into Smaya's world where colors bloom and stories come to life! Discover her latest masterpieces and magical tales.</p>
+            <p>Step into Smaya's world where colors bloom, stories come to life, and every day is an adventure!</p>
 
-            <div class="content-item">
-                <h4>My Latest Art Piece: The Sparkling Ocean!</h4>
-                <p>I painted a vibrant ocean scene with a friendly dolphin and shimmering fish. What's your favorite sea creature?</p>
-                <img src="images/smaya_art_ocean.jpg" alt="Smaya's ocean drawing" class="content-image">
-                <p class="image-caption">Painted with my favorite glitter pens!</p>
+            <div class="content-grid">
+                <div class="content-item">
+                    <h4>My Latest Art Piece: The Sparkling Ocean!</h4>
+                    <p>I painted a vibrant ocean scene with a friendly dolphin and shimmering fish. What's your favorite sea creature?</p>
+                    <img src="images/smaya_art_ocean.jpg" alt="Smaya's ocean drawing" class="content-image">
+                    <p class="image-caption">Painted with my favorite glitter pens!</p>
+                </div>
+
+                <div class="content-item">
+                    <h4>A Story I Wrote: The Little Cloud's Big Dream</h4>
+                    <p>This is a story about a tiny cloud who wanted to be the biggest, fluffiest cloud in the sky!</p>
+                    <a href="#" class="read-more-link">Read Smaya's Full Story</a>
+                </div>
+
+                <div class="content-item interactive-item">
+                    <h4>👗 Digital Dress-Up Fun!</h4>
+                    <p>Help my friend Lily pick the perfect outfit for her tea party! Drag and drop clothes to see her new look!</p>
+                    <button class="play-game-button smaya-button">Play Dress-Up!</button>
+                </div>
+
+                <div class="content-item interactive-item">
+                    <h4>📖 Telugu Slokas & Poems</h4>
+                    <p>Listen to beautiful Telugu poems and learn some new words. Press play to hear!</p>
+                    <button class="play-audio-button smaya-button">Listen Now!</button>
+                    </div>
+
+                <div class="content-item interactive-item">
+                    <h4>💄 Fun Makeup & Art Ideas</h4>
+                    <p>Explore playful art ideas inspired by colors and patterns! Create your own sparkling designs.</p>
+                    <button class="explore-art-button smaya-button">Get Inspired!</button>
+                </div>
+
+                <div class="content-item interactive-item">
+                    <h4>🎶 K-Pop Rhythm Fun!</h4>
+                    <p>Tap along to the beat of some cheerful K-Pop tunes. Can you keep up with the rhythm?</p>
+                    <button class="play-game-button smaya-button">Tap the Beat!</button>
+                </div>
             </div>
-
-            <div class="content-item">
-                <h4>A Story I Wrote: The Little Cloud's Big Dream</h4>
-                <p>This is a story about a tiny cloud who wanted to be the biggest, fluffiest cloud in the sky!</p>
-                <a href="#" class="read-more-link">Read Smaya's Full Story</a>
-            </div>
-
             <button class="view-all-button smaya-button">See More of Smaya's Fun!</button>
         </section>
 
         <section id="nihanth-section" class="child-section nihanth-theme">
             <h3>🚀 Nihanth's Explorer Zone 🚀</h3>
-            <p>Blast off into Nihanth's exciting universe! Explore his cool inventions, space adventures, and mind-bending science facts.</p>
+            <p>Blast off into Nihanth's exciting universe! Explore his cool inventions, space adventures, and mind-bending science facts!</p>
 
-            <div class="content-item">
-                <h4>My Coolest Creation: The Robo-Dino Friend!</h4>
-                <p>I built a robot dinosaur that can stomp, roar, and even fetch small toys! It's super strong!</p>
-                <img src="images/nihanth_robot_dino.jpg" alt="Nihanth's robot dinosaur" class="content-image">
-                <p class="image-caption">It lights up blue!</p>
+            <div class="content-grid">
+                <div class="content-item">
+                    <h4>My Coolest Creation: The Robo-Dino Friend!</h4>
+                    <p>I built a robot dinosaur that can stomp, roar, and even fetch small toys! It's super strong!</p>
+                    <img src="images/nihanth_robot_dino.jpg" alt="Nihanth's robot dinosaur" class="content-image">
+                    <p class="image-caption">It lights up blue!</p>
+                </div>
+
+                <div class="content-item">
+                    <h4>Amazing Science Fact: Why Is the Sky Blue?</h4>
+                    <p>Did you know the sky is blue because of tiny particles that scatter sunlight? Learn more cool facts!</p>
+                    <a href="#" class="read-more-link">Explore More Science Fun</a>
+                </div>
+
+                <div class="content-item interactive-item">
+                    <h4>🚗 Super Speed Race!</h4>
+                    <p>Get ready, set, GO! Race your car around the track and try to beat the clock!</p>
+                    <button class="play-game-button nihanth-button">Start Racing!</button>
+                </div>
+
+                <div class="content-item interactive-item">
+                    <h4>🤖 Build Your Own Robot!</h4>
+                    <p>Drag and drop parts to create your ultimate robot companion. What will yours do?</p>
+                    <button class="play-game-button nihanth-button">Start Building!</button>
+                </div>
+
+                <div class="content-item interactive-item">
+                    <h4>⌚ Cool Watch Collection!</h4>
+                    <p>Explore different kinds of watches and learn what they can do!</p>
+                    <button class="view-collection-button nihanth-button">View Watches!</button>
+                </div>
+
+                <div class="content-item interactive-item">
+                    <h4>⚔️ Pokemon Matching Game!</h4>
+                    <p>Find the matching pairs of your favorite Pokémon characters in this fun memory challenge!</p>
+                    <button class="play-game-button nihanth-button">Play Pokémon!</button>
+                </div>
             </div>
-
-            <div class="content-item">
-                <h4>Amazing Science Fact: Why Is the Sky Blue?</h4>
-                <p>Did you know the sky is blue because of tiny particles that scatter sunlight? Learn more cool facts!</p>
-                <a href="#" class="read-more-link">Explore More Science Fun</a>
-            </div>
-
             <button class="view-all-button nihanth-button">Discover Nihanth's Adventures!</button>
+        </section>
+
+        <section id="shared-fun" class="child-section shared-theme">
+            <h3>🌟 Play & Learn Together! 📚</h3>
+            <p>Discover fun games, learn new things, and make healthy habits together in our shared zone!</p>
+
+            <div class="content-grid">
+                <div class="content-item interactive-item">
+                    <h4>🔠 Alphabet Explorer!</h4>
+                    <p>Click on each letter to hear its sound and see a word that starts with it!</p>
+                    <div class="alphabet-grid" id="alphabet-explorer-grid">
+                        <div class="letter-card" data-letter="a" data-word="Apple"><span>A</span><img src="images/alphabet/apple.png" alt="Apple" class="letter-image"></div>
+                        <div class="letter-card" data-letter="b" data-word="Ball"><span>B</span><img src="images/alphabet/ball.png" alt="Ball" class="letter-image"></div>
+                        <div class="letter-card" data-letter="c" data-word="Cat"><span>C</span><img src="images/alphabet/cat.png" alt="Cat" class="letter-image"></div>
+                        <div class="letter-card" data-letter="d" data-word="Dog"><span>D</span><img src="images/alphabet/dog.png" alt="Dog" class="letter-image"></div>
+                        <div class="letter-card" data-letter="e" data-word="Elephant"><span>E</span><img src="images/alphabet/elephant.png" alt="Elephant" class="letter-image"></div>
+                        <div class="letter-card" data-letter="f" data-word="Fish"><span>F</span><img src="images/alphabet/fish.png" alt="Fish" class="letter-image"></div>
+                        <div class="letter-card" data-letter="g" data-word="Grape"><span>G</span><img src="images/alphabet/grape.png" alt="Grape" class="letter-image"></div>
+                        <div class="letter-card" data-letter="h" data-word="Hat"><span>H</span><img src="images/alphabet/hat.png" alt="Hat" class="letter-image"></div>
+                        <div class="letter-card" data-letter="i" data-word="Ice Cream"><span>I</span><img src="images/alphabet/icecream.png" alt="Ice Cream" class="letter-image"></div>
+                        <div class="letter-card" data-letter="j" data-word="Jellyfish"><span>J</span><img src="images/alphabet/jellyfish.png" alt="Jellyfish" class="letter-image"></div>
+                        <div class="letter-card" data-letter="k" data-word="Kite"><span>K</span><img src="images/alphabet/kite.png" alt="Kite" class="letter-image"></div>
+                        <div class="letter-card" data-letter="l" data-word="Lion"><span>L</span><img src="images/alphabet/lion.png" alt="Lion" class="letter-image"></div>
+                        <div class="letter-card" data-letter="m" data-word="Monkey"><span>M</span><img src="images/alphabet/monkey.png" alt="Monkey" class="letter-image"></div>
+                        <div class="letter-card" data-letter="n" data-word="Nest"><span>N</span><img src="images/alphabet/nest.png" alt="Nest" class="letter-image"></div>
+                        <div class="letter-card" data-letter="o" data-word="Orange"><span>O</span><img src="images/alphabet/orange.png" alt="Orange" class="letter-image"></div>
+                        <div class="letter-card" data-letter="p" data-word="Penguin"><span>P</span><img src="images/alphabet/penguin.png" alt="Penguin" class="letter-image"></div>
+                        <div class="letter-card" data-letter="q" data-word="Queen"><span>Q</span><img src="images/alphabet/queen.png" alt="Queen" class="letter-image"></div>
+                        <div class="letter-card" data-letter="r" data-word="Rainbow"><span>R</span><img src="images/alphabet/rainbow.png" alt="Rainbow" class="letter-image"></div>
+                        <div class="letter-card" data-letter="s" data-word="Star"><span>S</span><img src="images/alphabet/star.png" alt="Star" class="letter-image"></div>
+                        <div class="letter-card" data-letter="t" data-word="Tiger"><span>T</span><img src="images/alphabet/tiger.png" alt="Tiger" class="letter-image"></div>
+                        <div class="letter-card" data-letter="u" data-word="Umbrella"><span>U</span><img src="images/alphabet/umbrella.png" alt="Umbrella" class="letter-image"></div>
+                        <div class="letter-card" data-letter="v" data-word="Violin"><span>V</span><img src="images/alphabet/violin.png" alt="Violin" class="letter-image"></div>
+                        <div class="letter-card" data-letter="w" data-word="Watermelon"><span>W</span><img src="images/alphabet/watermelon.png" alt="Watermelon" class="letter-image"></div>
+                        <div class="letter-card" data-letter="x" data-word="X-ray"><span>X</span><img src="images/alphabet/xray.png" alt="X-ray" class="letter-image"></div>
+                        <div class="letter-card" data-letter="y" data-word="Yoyo"><span>Y</span><img src="images/alphabet/yoyo.png" alt="Yoyo" class="letter-image"></div>
+                        <div class="letter-card" data-letter="z" data-word="Zebra"><span>Z</span><img src="images/alphabet/zebra.png" alt="Zebra" class="letter-image"></div>
+                    </div>
+                    <p class="alphabet-message">Click a letter to begin!</p>
+                </div>
+
+                <div class="content-item interactive-item">
+                    <h4>🍎 Eat the Rainbow!</h4>
+                    <p>Drag colorful fruits and veggies onto your plate to make a super healthy meal!</p>
+                    <button class="play-game-button">Start Eating!</button>
+                </div>
+
+                <div class="content-item interactive-item">
+                    <h4>🗓️ My Daily Routine Helper</h4>
+                    <p>Drag chores and activities to your schedule. Finish them to earn stars!</p>
+                    <button class="play-game-button">Build My Routine!</button>
+                </div>
+
+                <div class="content-item interactive-item">
+                    <h4>😊 Feeling Friends!</h4>
+                    <p>Explore different emotions with our friendly characters. How are you feeling today?</p>
+                    <button class="play-game-button">Meet the Feelings!</button>
+                </div>
+
+                <div class="content-item interactive-item">
+                    <h4>☀️ What to Wear Today?</h4>
+                    <p>Check the weather and pick the perfect outfit for your day!</p>
+                    <button class="play-game-button">Dress for Weather!</button>
+                </div>
+
+                <div class="content-item interactive-item">
+                    <h4>➕ Math Challenge!</h4>
+                    <p>Solve fun math puzzles with addition, subtraction, and more!</p>
+                    <button class="play-game-button">Start Math Fun!</button>
+                </div>
+            </div>
         </section>
 
         <section id="gallery-section" class="gallery-section">
             <h3>🌈 Our Fun Gallery 🌟</h3>
-            <p>Take a peek at our combined gallery of awesome moments, shared projects, and family fun! New pictures added regularly!</p>
-            <div class="gallery-grid">
-                <div class="gallery-item"><img src="images/Smaya-Nihan.jpg" alt="Smaya and Nihanth playing"></div>
-                <div class="gallery-item"><img src="images/nihan.jpg" alt="Smaya's school project"></div>
-                <div class="gallery-item"><img src="images/smaya-nihan1.jpg" alt="Nihanth's lego creation"></div>
-                <div class="gallery-item"><img src="images/smaya.jpg" alt="Kids at the park"></div>
-                </div>
-            <button class="explore-button">See All Our Amazing Memories!</button>
+            <p>See all our amazing memories and fun photos in our special online album!</p>
+            <a href="https://photos.app.goo.gl/TThxKe3AMui3GsV5A" target="_blank" rel="noopener noreferrer" class="explore-button gallery-link-button">
+                View Our Full Photo Album on Google Photos!
+            </a>
         </section>
     </main>
 
