--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <section id="gallery-section" class="gallery-section">
             <h3>🌈 Our Fun Gallery 🌟</h3>
             <p>See all our amazing memories and fun photos in our special online album!</p>
-            <a href="https://photos.app.goo.gl/TThxKe3AMui3GsV5A" target="_blank" rel="noopener noreferrer" class="explore-button gallery-link-button">
+            <a href="https://photos.app.goo.gl/ReNQh6zYkhinNUph7" target="_blank" rel="noopener noreferrer" class="explore-button gallery-link-button">
                 View Our Full Photo Album on Google Photos!
             </a>
         </section>
